# ASGARD_GRBAfterglow

./: .gitignore  README.md  extinc.py  install.sh  pyproject.toml
compat/: __init__.py
src/Electron/: FS_electron_weno5.f90  calling_modules.f90
